# pvr.dvblink

./: CMakeLists.txt
debian/: changelog.in  control  rules
lib/libdvblinkremote/: CMakeLists.txt  curlhttpclient.cpp
pvr.dvblink/: addon.xml
src/: DVBLinkClient.cpp  DVBLinkClient.h  DialogDeleteTimer.cpp  DialogRecordPref.cpp  HttpPostClient.h  RecordingStreamer.h  TimeShiftBuffer.h  client.cpp  client.h
